force-app/main/default/objects/Prework__c/Prework__c.object-meta.xml
<CustomObject>
    <label>Prework</label>
    <nameField>
        <displayFormat>Pre-{000000}</displayFormat>
        <label>Prework</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prework</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>