force-app/main/default/objects/Prework__c/fields/Activist_Learning_Style_Rank__c.field-meta.xml
<CustomField>
    <fullName>Activist_Learning_Style_Rank__c</fullName>
    <label>Activist Learning Style Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>