force-app/main/default/objects/Prework__c/fields/Completed_Profile_Questions__c.field-meta.xml
<CustomField>
    <fullName>Completed_Profile_Questions__c</fullName>
    <label>Completed Profile Questions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>