force-app/main/default/objects/Prework__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prework</relationshipLabel>
    <relationshipName>Prework</relationshipName>
    <type>Lookup</type>
</CustomField>