force-app/main/default/objects/Prework__c/fields/Current_Change_Management_Competency__c.field-meta.xml
<CustomField>
    <fullName>Current_Change_Management_Competency__c</fullName>
    <label>Current Change Management Competency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>