force-app/main/default/objects/Prework__c/fields/Current_Use_Of_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Current_Use_Of_Methodology__c</fullName>
    <label>Current Use Of Methodology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>