force-app/main/default/objects/Prework__c/fields/Frequency_of_Use_PCT_Model__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Use_PCT_Model__c</fullName>
    <label>Frequency of Use - PCT Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>