force-app/main/default/objects/Prework__c/fields/Frequency_of_Use_Three_phase_process__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Use_Three_phase_process__c</fullName>
    <label>Frequency of Use - Three phase process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>