force-app/main/default/objects/Prework__c/fields/Frequeny_Of_Use_Of_Methdology_Parts__c.field-meta.xml
<CustomField>
    <fullName>Frequeny_Of_Use_Of_Methdology_Parts__c</fullName>
    <label>Frequeny Of Use Of Methdology Parts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>