force-app/main/default/objects/Prework__c/fields/Impact_of_Applying_ADKAR_Model__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_Applying_ADKAR_Model__c</fullName>
    <label>Impact of Applying - ADKAR Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>