force-app/main/default/objects/Prework__c/fields/Impact_Of_Applying_Methodology_Parts__c.field-meta.xml
<CustomField>
    <fullName>Impact_Of_Applying_Methodology_Parts__c</fullName>
    <label>Impact Of Applying Methodology Parts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>