force-app/main/default/objects/Prework__c/fields/Impact_of_Applying_Three_Phase_Process__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_Applying_Three_Phase_Process__c</fullName>
    <label>Impact of Applying - Three Phase Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>