force-app/main/default/objects/Prework__c/fields/Instructor_Type__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Type__c</fullName>
    <label>Instructor Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>