force-app/main/default/objects/Prework__c/fields/Learning_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Learning_Objectives__c</fullName>
    <label>Learning Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>