force-app/main/default/objects/Prework__c/fields/Number_Of_Projects_Applied_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Projects_Applied_Methodology__c</fullName>
    <label>Number Of Projects Applied Methodology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>