force-app/main/default/objects/Prework__c/fields/OLD_Top_Wins_Of_Applying_Methodology__c.field-meta.xml
<CustomField>
    <fullName>OLD_Top_Wins_Of_Applying_Methodology__c</fullName>
    <label>OLD Top Wins Of Applying Methodology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>