force-app/main/default/objects/Prework__c/fields/PCT_Leadership_Sponsorship_Score__c.field-meta.xml
<CustomField>
    <fullName>PCT_Leadership_Sponsorship_Score__c</fullName>
    <label>PCT Leadership Sponsorship Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>