force-app/main/default/objects/Prework__c/fields/PCT_Project_Management_Score__c.field-meta.xml
<CustomField>
    <fullName>PCT_Project_Management_Score__c</fullName>
    <label>PCT Project Management Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>