force-app/main/default/objects/Prework__c/fields/PCT_Success_Score__c.field-meta.xml
<CustomField>
    <fullName>PCT_Success_Score__c</fullName>
    <label>PCT Success Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>