force-app/main/default/objects/Prework__c/fields/Percentage_Time_On_Change_Management__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Time_On_Change_Management__c</fullName>
    <label>Percentage Time On Change Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>