force-app/main/default/objects/Prework__c/fields/Pragmatist_Learning_Style_Rank__c.field-meta.xml
<CustomField>
    <fullName>Pragmatist_Learning_Style_Rank__c</fullName>
    <label>Pragmatist Learning Style Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>