force-app/main/default/objects/Prework__c/fields/Proficiency_of_ADKAR_Model__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_of_ADKAR_Model__c</fullName>
    <label>Proficiency of - ADKAR Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>