force-app/main/default/objects/Prework__c/fields/Proficiency_of_Three_Phase_Process__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_of_Three_Phase_Process__c</fullName>
    <label>Proficiency of - Three Phase Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>