force-app/main/default/objects/Prework__c/fields/Program_Title__c.field-meta.xml
<CustomField>
    <fullName>Program_Title__c</fullName>
    <label>Program Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>