force-app/main/default/objects/Prework__c/fields/Project_change_type__c.field-meta.xml
<CustomField>
    <fullName>Project_change_type__c</fullName>
    <label>Project change type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>