force-app/main/default/objects/Prework__c/fields/Project_Compatibility__c.field-meta.xml
<CustomField>
    <fullName>Project_Compatibility__c</fullName>
    <label>Project Compatibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>