force-app/main/default/objects/Prework__c/fields/Project_Management_Approach__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Approach__c</fullName>
    <label>Project Management Approach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>