force-app/main/default/objects/Prework__c/fields/Project_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Project_Objectives__c</fullName>
    <label>Project Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>