force-app/main/default/objects/Prework__c/fields/Project_Setup_and_PCT__c.field-meta.xml
<CustomField>
    <fullName>Project_Setup_and_PCT__c</fullName>
    <label>Project Setup and PCT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>