force-app/main/default/objects/Prework__c/fields/Reflector_Learning_Style_Rank__c.field-meta.xml
<CustomField>
    <fullName>Reflector_Learning_Style_Rank__c</fullName>
    <label>Reflector Learning Style Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>