force-app/main/default/objects/Prework__c/fields/Theorist_Learning_Style_Rank__c.field-meta.xml
<CustomField>
    <fullName>Theorist_Learning_Style_Rank__c</fullName>
    <label>Theorist Learning Style Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>