force-app/main/default/objects/Prework__c/fields/Top_Challenges_Applying_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Top_Challenges_Applying_Methodology__c</fullName>
    <label>Top Challenges Applying Methodology</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>