force-app/main/default/objects/Prework__c/fields/Working_With_Others__c.field-meta.xml
<CustomField>
    <fullName>Working_With_Others__c</fullName>
    <label>Working With Others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>