force-app/main/default/objects/Prework__c/fields/Year_Completed_Certification__c.field-meta.xml
<CustomField>
    <fullName>Year_Completed_Certification__c</fullName>
    <label>Year Completed Certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>