force-app/main/default/objects/Prework__c/fields/Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_Experience__c</fullName>
    <label>Years Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>