force-app/main/default/objects/Prework__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Working_With_Others__c</columns>
    <columns>Project_Title__c</columns>
    <columns>Years_Experience__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Instructor_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>